# projects_mlops

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/interim/: titanic_pre_univarie.csv  titanic_processed_univarie.csv
data/processed/: data_processed.csv  titanic_processed.csv
data/raw/: dfall.csv
notesbooks/: analyses_data.ipynb  prepocessing_data.ipynb  process_bivarie.ipynb  process_multi.ipynb  selection_feature.ipynb
src/data/: strategie_analyses.py  strategie_bivarie.py  strategie_feature.py  strategie_multivarie.py  strategie_univarie.py
src/end_to_end_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: traine_model.py
src/pipeline/: pipeline.py
src/pipeline/steps/: evaluation.py  load.py  missing_value.py  outlier_detection.py  preprocessing.py  splitter.py  training.py
src/preprocessing_strategie/: missing_value.py  outlier_detection.py
